<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="es.jujoru.examentestapp.Fragments.FragmentConfiguracionExamen">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/d0">

        <ImageView
            android:id="@+id/fce_iv_cabecera"
            android:layout_width="0dp"
            android:layout_height="@dimen/d150"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@drawable/item_fondo"
            />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextViewCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/d32"
            android:layout_marginStart="@dimen/d16"
            android:text="NOMBRE ASIGNATURA" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ce_titulo"
                style="@style/TextViewSecundario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d16"
                android:layout_marginTop="@dimen/d16"
                android:text="@string/ce_titulo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fce_iv_cabecera" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d16"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingStart="@dimen/d16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_duracion"
                    android:text="@string/ce_duracion" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_tiempo_limite"
                    android:text="@string/ce_tiempo_limite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_numero_preguntas"
                    android:text="@string/ce_numero_preguntas" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_valor_blanco"
                    android:text="@string/ce_valor_blanco" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_valor_acierto"
                    android:text="@string/ce_valor_acierto" />


                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_valor_fallo"
                    android:text="@string/ce_valor_fallo" />

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_24dp" />

                <TextView
                    style="@style/TextViewInfoConfig"
                    android:id="@+id/ce_tv_nota_corte"
                    android:text="@string/ce_nota_corte" />

            </GridLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabInfoConfig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                app:backgroundTint="@color/amber_500"
                app:srcCompat="@drawable/ic_edit_24dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
